chore: 优化整体结构

--- a/tsconfig-esm.json
+++ b/tsconfig-esm.json
@@ -3,7 +3,7 @@
     "target": "ES2018",
     "lib": ["ESNext", "DOM"],
     "allowJs": true,
-    "module": "ES6",
+    "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": false,
     "strict": true,
